// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`blueprint tests > flowchart > LR flowchart 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "Stop",
      "label": "",
      "size": "s",
      "startNodeId": "Start",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "Start",
      "label": "Start",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 169,
      "x": 10,
      "y": 10,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "Stop",
      "label": "Stop",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 162,
      "x": 279,
      "y": 10,
    },
  ],
}
`;

exports[`blueprint tests > flowchart > LR flowchart with parallel edges and self-loop 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -41,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "B",
      "label": "Request",
      "size": "s",
      "startNodeId": "A",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -31,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "A",
      "label": "Response",
      "size": "s",
      "startNodeId": "B",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "C",
      "label": "",
      "size": "s",
      "startNodeId": "B",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -66,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "D",
      "label": "Yes",
      "size": "s",
      "startNodeId": "C",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 13,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "E",
      "label": "No",
      "size": "s",
      "startNodeId": "C",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -25,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "D",
      "label": "",
      "size": "s",
      "startNodeId": "D",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "F",
      "label": "",
      "size": "s",
      "startNodeId": "D",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "A",
      "label": "Client",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 184,
      "x": 10,
      "y": 257,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "B",
      "label": "Server",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 189,
      "x": 423,
      "y": 257,
    },
    {
      "align": "middle",
      "geo": "diamond",
      "h": 214,
      "id": "C",
      "label": "Decision",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 214,
      "x": 712,
      "y": 199,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "D",
      "label": "Process",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 204,
      "x": 1071,
      "y": 91,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "E",
      "label": "Reject",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 191,
      "x": 1077,
      "y": 289,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "F",
      "label": "Done",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 171,
      "x": 1374,
      "y": 10,
    },
  ],
}
`;

exports[`blueprint tests > flowchart > TB flowchart with parallel edges and self-loop 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 97,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "B",
      "label": "Request",
      "size": "s",
      "startNodeId": "A",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 61,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "A",
      "label": "Response",
      "size": "s",
      "startNodeId": "B",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "C",
      "label": "",
      "size": "s",
      "startNodeId": "B",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 87,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "D",
      "label": "Yes",
      "size": "s",
      "startNodeId": "C",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -23,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "E",
      "label": "No",
      "size": "s",
      "startNodeId": "C",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 38,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "D",
      "label": "",
      "size": "s",
      "startNodeId": "D",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "F",
      "label": "",
      "size": "s",
      "startNodeId": "D",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "A",
      "label": "Client",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 184,
      "x": 337,
      "y": 10,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "B",
      "label": "Server",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 189,
      "x": 335,
      "y": 254,
    },
    {
      "align": "middle",
      "geo": "diamond",
      "h": 214,
      "id": "C",
      "label": "Decision",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 214,
      "x": 322,
      "y": 452,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "D",
      "label": "Process",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 204,
      "x": 86,
      "y": 813,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "E",
      "label": "Reject",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 191,
      "x": 390,
      "y": 813,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "F",
      "label": "Done",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 171,
      "x": 10,
      "y": 1010,
    },
  ],
}
`;

exports[`blueprint tests > flowchart > flowchart with linkStyle color and dash 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -33,
      "color": "green",
      "dash": "solid",
      "endNodeId": "B",
      "label": "GET",
      "size": "m",
      "startNodeId": "A",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -108,
      "color": "blue",
      "dash": "dashed",
      "endNodeId": "B",
      "label": "POST",
      "size": "m",
      "startNodeId": "A",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -33,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "A",
      "label": "200",
      "size": "s",
      "startNodeId": "B",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -108,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "A",
      "label": "400",
      "size": "s",
      "startNodeId": "B",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "A",
      "label": "Client",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 184,
      "x": 10,
      "y": 93,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "B",
      "label": "API",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 145,
      "x": 366,
      "y": 93,
    },
  ],
}
`;

exports[`blueprint tests > flowchart > flowchart with subgraphs 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 181,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "a2",
      "label": "",
      "size": "s",
      "startNodeId": "c1",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "a2",
      "label": "",
      "size": "s",
      "startNodeId": "a1",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "b2",
      "label": "",
      "size": "s",
      "startNodeId": "b1",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 5,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "c2",
      "label": "",
      "size": "s",
      "startNodeId": "c1",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 533,
      "id": "one",
      "label": "one",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 258,
      "x": 935,
      "y": -4,
    },
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 236,
      "id": "two",
      "label": "two",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 531,
      "x": 342,
      "y": 46,
    },
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 533,
      "id": "three",
      "label": "three",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 270,
      "x": 10,
      "y": -4,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "c1",
      "label": "c1",
      "parentId": "three",
      "size": "m",
      "verticalAlign": "middle",
      "w": 132,
      "x": 85,
      "y": 123,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "a2",
      "label": "a2",
      "parentId": "one",
      "size": "m",
      "verticalAlign": "middle",
      "w": 133,
      "x": 998,
      "y": 382,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "a1",
      "label": "a1",
      "parentId": "one",
      "size": "m",
      "verticalAlign": "middle",
      "w": 133,
      "x": 998,
      "y": 123,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "b1",
      "label": "b1",
      "parentId": "two",
      "size": "m",
      "verticalAlign": "middle",
      "w": 134,
      "x": 408,
      "y": 123,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "b2",
      "label": "b2",
      "parentId": "two",
      "size": "m",
      "verticalAlign": "middle",
      "w": 134,
      "x": 673,
      "y": 123,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "c2",
      "label": "c2",
      "parentId": "three",
      "size": "m",
      "verticalAlign": "middle",
      "w": 132,
      "x": 73,
      "y": 382,
    },
  ],
}
`;

exports[`blueprint tests > flowchart > simple TD flowchart 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "B",
      "label": "",
      "size": "s",
      "startNodeId": "A",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 31,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "C",
      "label": "Yes",
      "size": "s",
      "startNodeId": "B",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -61,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "E",
      "label": "No",
      "size": "s",
      "startNodeId": "B",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "A",
      "label": "Start",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 169,
      "x": 61,
      "y": 10,
    },
    {
      "align": "middle",
      "geo": "diamond",
      "h": 161,
      "id": "B",
      "label": "Is it?",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 161,
      "x": 65,
      "y": 207,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "C",
      "label": "OK",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 139,
      "x": 10,
      "y": 516,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97,
      "id": "E",
      "label": "End",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 152,
      "x": 136,
      "y": 860,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > sequence diagram with activation boxes 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.2,
      "anchorStartY": 0.2,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-John",
      "isExact": true,
      "isPrecise": true,
      "label": "Hello John, how are you?",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
    {
      "anchorEndY": 0.4,
      "anchorStartY": 0.4,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-John",
      "isExact": true,
      "isPrecise": true,
      "label": "John, can you hear me?",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
    {
      "anchorEndY": 0.6,
      "anchorStartY": 0.6,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-Alice",
      "isExact": true,
      "isPrecise": true,
      "label": "Hi Alice, I can hear you!",
      "size": "s",
      "startNodeId": "lifeline-John",
    },
    {
      "anchorEndY": 0.8,
      "anchorStartY": 0.8,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-Alice",
      "isExact": true,
      "isPrecise": true,
      "label": "I feel great!",
      "size": "s",
      "startNodeId": "lifeline-John",
    },
  ],
  "groups": [
    [
      "actor-top-Alice",
      "lifeline-Alice",
      "actor-bottom-Alice",
    ],
    [
      "actor-top-John",
      "lifeline-John",
      "actor-bottom-John",
    ],
  ],
  "lines": [
    {
      "endY": 390,
      "id": "lifeline-Alice",
      "x": -150,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-John",
      "x": 150,
      "y": -190,
    },
  ],
  "nodes": [
    {
      "color": "light-violet",
      "fill": "solid",
      "geo": "rectangle",
      "h": 257,
      "id": "activation-1",
      "size": "s",
      "w": 20,
      "x": 140,
      "y": -124,
    },
    {
      "color": "light-violet",
      "fill": "solid",
      "geo": "rectangle",
      "h": 101,
      "id": "activation-0",
      "size": "s",
      "w": 20,
      "x": 146,
      "y": -46,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-John",
      "label": "John",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-John",
      "label": "John",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": 200,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > sequence diagram with autonumber 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.25,
      "anchorStartY": 0.25,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "decoration": {
        "type": "autonumber",
        "value": "1",
      },
      "endNodeId": "lifeline-Bob",
      "isExact": true,
      "isPrecise": true,
      "label": "Hello",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
    {
      "anchorEndY": 0.5,
      "anchorStartY": 0.5,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "decoration": {
        "type": "autonumber",
        "value": "2",
      },
      "endNodeId": "lifeline-Alice",
      "isExact": true,
      "isPrecise": true,
      "label": "Hi",
      "size": "s",
      "startNodeId": "lifeline-Bob",
    },
    {
      "anchorEndY": 0.75,
      "anchorStartY": 0.75,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "decoration": {
        "type": "autonumber",
        "value": "3",
      },
      "endNodeId": "lifeline-Bob",
      "isExact": true,
      "isPrecise": true,
      "label": "How are you?",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
  ],
  "groups": [
    [
      "actor-top-Alice",
      "lifeline-Alice",
      "actor-bottom-Alice",
    ],
    [
      "actor-top-Bob",
      "lifeline-Bob",
      "actor-bottom-Bob",
    ],
  ],
  "lines": [
    {
      "endY": 390,
      "id": "lifeline-Alice",
      "x": -150,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-Bob",
      "x": 150,
      "y": -190,
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-Bob",
      "label": "Bob",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-Bob",
      "label": "Bob",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": 200,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > sequence diagram with create participant 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.2,
      "anchorStartY": 0.2,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-App",
      "isExact": true,
      "isPrecise": true,
      "label": "Start report generation",
      "size": "s",
      "startNodeId": "lifeline-User",
    },
    {
      "anchorEndY": 0.5,
      "anchorStartY": 0.4,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "actor-top-JobRunner",
      "isExact": true,
      "isExactEnd": false,
      "isPrecise": true,
      "isPreciseEnd": false,
      "label": "Spawn background job",
      "size": "s",
      "startNodeId": "lifeline-App",
    },
    {
      "anchorEndY": 0.6,
      "anchorStartY": 0.6,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-App",
      "isExact": true,
      "isPrecise": true,
      "label": "Job started",
      "size": "s",
      "startNodeId": "lifeline-JobRunner",
    },
    {
      "anchorEndY": 0.8,
      "anchorStartY": 0.8,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-User",
      "isExact": true,
      "isPrecise": true,
      "label": "Report is processing",
      "size": "s",
      "startNodeId": "lifeline-App",
    },
  ],
  "groups": [
    [
      "actor-top-User",
      "lifeline-User",
      "actor-bottom-User",
    ],
    [
      "actor-top-App",
      "lifeline-App",
      "actor-bottom-App",
    ],
    [
      "actor-top-JobRunner",
      "lifeline-JobRunner",
      "actor-bottom-JobRunner",
    ],
  ],
  "lines": [
    {
      "endY": 515,
      "id": "lifeline-User",
      "x": -355,
      "y": -252,
    },
    {
      "endY": 515,
      "id": "lifeline-App",
      "x": -55,
      "y": -252,
    },
    {
      "endY": 271,
      "id": "lifeline-JobRunner",
      "x": 355,
      "y": -9,
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-User",
      "label": "User",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -445,
      "y": -327,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-User",
      "label": "User",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -445,
      "y": 262,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-App",
      "label": "App",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -145,
      "y": -327,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-App",
      "label": "App",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -145,
      "y": 262,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-JobRunner",
      "label": "JobRunner",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 265,
      "y": -84,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-JobRunner",
      "label": "JobRunner",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 265,
      "y": 262,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > sequence diagram with explicit activate/deactivate 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.2,
      "anchorStartY": 0.2,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-API",
      "isExact": true,
      "isPrecise": true,
      "label": "Get order",
      "size": "s",
      "startNodeId": "lifeline-Client",
    },
    {
      "anchorEndY": 0.4,
      "anchorStartY": 0.4,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-DB",
      "isExact": true,
      "isPrecise": true,
      "label": "Query order",
      "size": "s",
      "startNodeId": "lifeline-API",
    },
    {
      "anchorEndY": 0.6,
      "anchorStartY": 0.6,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-API",
      "isExact": true,
      "isPrecise": true,
      "label": "Order row",
      "size": "s",
      "startNodeId": "lifeline-DB",
    },
    {
      "anchorEndY": 0.8,
      "anchorStartY": 0.8,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-Client",
      "isExact": true,
      "isPrecise": true,
      "label": "Order JSON",
      "size": "s",
      "startNodeId": "lifeline-API",
    },
  ],
  "groups": [
    [
      "actor-top-Client",
      "lifeline-Client",
      "actor-bottom-Client",
    ],
    [
      "actor-top-API",
      "lifeline-API",
      "actor-bottom-API",
    ],
    [
      "actor-top-DB",
      "lifeline-DB",
      "actor-bottom-DB",
    ],
  ],
  "lines": [
    {
      "endY": 390,
      "id": "lifeline-Client",
      "x": -300,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-API",
      "x": 0,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-DB",
      "x": 300,
      "y": -190,
    },
  ],
  "nodes": [
    {
      "color": "light-violet",
      "fill": "solid",
      "geo": "rectangle",
      "h": 257,
      "id": "activation-1",
      "size": "s",
      "w": 20,
      "x": -10,
      "y": -124,
    },
    {
      "color": "light-violet",
      "fill": "solid",
      "geo": "rectangle",
      "h": 101,
      "id": "activation-0",
      "size": "s",
      "w": 20,
      "x": 290,
      "y": -46,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-Client",
      "label": "Client",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -390,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-Client",
      "label": "Client",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -390,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-API",
      "label": "API",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -90,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-API",
      "label": "API",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -90,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-DB",
      "label": "DB",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 210,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-DB",
      "label": "DB",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 210,
      "y": 200,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > sequence diagram with loop, opt, and self-message 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.2,
      "anchorStartY": 0.2,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-Q",
      "isExact": true,
      "isPrecise": true,
      "label": "enqueue(job)",
      "size": "s",
      "startNodeId": "lifeline-P",
    },
    {
      "anchorEndY": 0.4,
      "anchorStartY": 0.4,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-Q",
      "isExact": true,
      "isPrecise": true,
      "label": "dequeue()",
      "size": "s",
      "startNodeId": "lifeline-W",
    },
    {
      "anchorEndY": 0.6,
      "anchorStartY": 0.6,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-W",
      "isExact": true,
      "isPrecise": true,
      "label": "job?",
      "size": "s",
      "startNodeId": "lifeline-Q",
    },
    {
      "anchorEndY": 0.84,
      "anchorStartY": 0.76,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": -80,
      "dash": "solid",
      "endNodeId": "lifeline-W",
      "isExact": true,
      "isPrecise": true,
      "label": "execute()",
      "size": "s",
      "startNodeId": "lifeline-W",
    },
  ],
  "groups": [
    [
      "actor-top-P",
      "lifeline-P",
      "actor-bottom-P",
    ],
    [
      "actor-top-Q",
      "lifeline-Q",
      "actor-bottom-Q",
    ],
    [
      "actor-top-W",
      "lifeline-W",
      "actor-bottom-W",
    ],
  ],
  "lines": [
    {
      "endY": 390,
      "id": "lifeline-P",
      "x": -300,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-Q",
      "x": 0,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-W",
      "x": 300,
      "y": -190,
    },
  ],
  "nodes": [
    {
      "align": "start",
      "color": "light-blue",
      "dash": "dashed",
      "fill": "none",
      "geo": "rectangle",
      "h": 153,
      "id": "fragment-0",
      "label": "loop [poll]",
      "size": "s",
      "verticalAlign": "start",
      "w": 540,
      "x": -120,
      "y": -84,
    },
    {
      "align": "start",
      "color": "light-blue",
      "dash": "dashed",
      "fill": "none",
      "geo": "rectangle",
      "h": 75,
      "id": "fragment-1",
      "label": "opt [job received]",
      "size": "s",
      "verticalAlign": "start",
      "w": 240,
      "x": 180,
      "y": 72,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-P",
      "label": "Producer",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -390,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-P",
      "label": "Producer",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -390,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-Q",
      "label": "Queue",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -90,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-Q",
      "label": "Queue",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -90,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-W",
      "label": "Worker",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 210,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-W",
      "label": "Worker",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 210,
      "y": 200,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > sequence diagram with notes 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.17,
      "anchorStartY": 0.17,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-John",
      "isExact": true,
      "isPrecise": true,
      "label": "Hello",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
    {
      "anchorEndY": 0.83,
      "anchorStartY": 0.83,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-Alice",
      "isExact": true,
      "isPrecise": true,
      "label": "Hi!",
      "size": "s",
      "startNodeId": "lifeline-John",
    },
  ],
  "groups": [
    [
      "actor-top-Alice",
      "lifeline-Alice",
      "actor-bottom-Alice",
    ],
    [
      "actor-top-John",
      "lifeline-John",
      "actor-bottom-John",
    ],
  ],
  "lines": [
    {
      "endY": 390,
      "id": "lifeline-Alice",
      "x": -150,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-John",
      "x": 150,
      "y": -190,
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-John",
      "label": "John",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-John",
      "label": "John",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": 200,
    },
    {
      "align": "middle",
      "color": "yellow",
      "dash": "draw",
      "fill": "solid",
      "geo": "rectangle",
      "h": 59,
      "id": "note-1",
      "label": "Alice thinks",
      "size": "s",
      "verticalAlign": "middle",
      "w": 172,
      "x": -145,
      "y": -89,
    },
    {
      "align": "middle",
      "color": "yellow",
      "dash": "draw",
      "fill": "solid",
      "geo": "rectangle",
      "h": 59,
      "id": "note-2",
      "label": "John ponders",
      "size": "s",
      "verticalAlign": "middle",
      "w": 172,
      "x": -27,
      "y": -24,
    },
    {
      "align": "middle",
      "color": "yellow",
      "dash": "draw",
      "fill": "solid",
      "geo": "rectangle",
      "h": 59,
      "id": "note-3",
      "label": "Both see this",
      "size": "s",
      "verticalAlign": "middle",
      "w": 305,
      "x": -152,
      "y": 41,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > simple sequence diagram 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.25,
      "anchorStartY": 0.25,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-John",
      "isExact": true,
      "isPrecise": true,
      "label": "Hello John, how are you?",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
    {
      "anchorEndY": 0.5,
      "anchorStartY": 0.5,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-Alice",
      "isExact": true,
      "isPrecise": true,
      "label": "Great!",
      "size": "s",
      "startNodeId": "lifeline-John",
    },
    {
      "anchorEndY": 0.75,
      "anchorStartY": 0.75,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-John",
      "isExact": true,
      "isPrecise": true,
      "label": "See you later!",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
  ],
  "groups": [
    [
      "actor-top-Alice",
      "lifeline-Alice",
      "actor-bottom-Alice",
    ],
    [
      "actor-top-John",
      "lifeline-John",
      "actor-bottom-John",
    ],
  ],
  "lines": [
    {
      "endY": 390,
      "id": "lifeline-Alice",
      "x": -150,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-John",
      "x": 150,
      "y": -190,
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-John",
      "label": "John",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-John",
      "label": "John",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": 200,
    },
  ],
}
`;

exports[`blueprint tests > state diagram > compound state diagram 1`] = `
{
  "edges": [
    {
      "bend": 1,
      "endNodeId": "fA",
      "label": undefined,
      "startNodeId": "First_start",
    },
    {
      "bend": 1,
      "endNodeId": "First_end",
      "label": undefined,
      "startNodeId": "fA",
    },
    {
      "bend": 1,
      "endNodeId": "sA",
      "label": undefined,
      "startNodeId": "Second_start",
    },
    {
      "bend": 1,
      "endNodeId": "Second_end",
      "label": undefined,
      "startNodeId": "sA",
    },
    {
      "bend": 70,
      "endNodeId": "First",
      "label": "",
      "startNodeId": "root_start",
    },
    {
      "bend": -70,
      "endNodeId": "Second",
      "label": "",
      "startNodeId": "root_start",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 496,
      "id": "First",
      "label": "First",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 175,
      "x": 10,
      "y": 128,
    },
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 496,
      "id": "Second",
      "label": "Second",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 176,
      "x": 285,
      "y": 128,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "root_start",
      "parentId": undefined,
      "w": 36,
      "x": 218,
      "y": 1,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "First_start",
      "parentId": "First",
      "w": 36,
      "x": 80,
      "y": 184,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "fA",
      "label": "fA",
      "parentId": "First",
      "size": "m",
      "verticalAlign": "middle",
      "w": 70,
      "x": 63,
      "y": 338,
    },
    {
      "color": "black",
      "fill": "none",
      "geo": "ellipse",
      "h": 40,
      "id": "First_end",
      "parentId": "First",
      "w": 40,
      "x": 78,
      "y": 529,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 24,
      "id": "First_end__inner",
      "parentId": "First",
      "w": 24,
      "x": 86,
      "y": 537,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "Second_start",
      "parentId": "Second",
      "w": 36,
      "x": 355,
      "y": 184,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "sA",
      "label": "sA",
      "parentId": "Second",
      "size": "m",
      "verticalAlign": "middle",
      "w": 71,
      "x": 338,
      "y": 338,
    },
    {
      "color": "black",
      "fill": "none",
      "geo": "ellipse",
      "h": 40,
      "id": "Second_end",
      "parentId": "Second",
      "w": 40,
      "x": 353,
      "y": 529,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 24,
      "id": "Second_end__inner",
      "parentId": "Second",
      "w": 24,
      "x": 361,
      "y": 537,
    },
  ],
}
`;

exports[`blueprint tests > state diagram > compound state with bidirectional edges and self-loop 1`] = `
{
  "edges": [
    {
      "bend": 1,
      "endNodeId": "Unauthed",
      "label": undefined,
      "startNodeId": "Session_start",
    },
    {
      "bend": 69,
      "endNodeId": "Authed",
      "label": "login",
      "startNodeId": "Unauthed",
    },
    {
      "bend": 66,
      "endNodeId": "Unauthed",
      "label": "logout",
      "startNodeId": "Authed",
    },
    {
      "bend": -0,
      "endNodeId": "Authed",
      "label": "refresh",
      "startNodeId": "Authed",
    },
    {
      "bend": -0,
      "endNodeId": "Session",
      "label": "",
      "startNodeId": "root_start",
    },
    {
      "bend": 0,
      "endNodeId": "root_end",
      "label": "close",
      "startNodeId": "Session",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 903,
      "id": "Session",
      "label": "Session",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 308,
      "x": 10,
      "y": 128,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "root_start",
      "parentId": undefined,
      "w": 36,
      "x": 146,
      "y": 1,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "Session_start",
      "parentId": "Session",
      "w": 36,
      "x": 143,
      "y": 184,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "Unauthed",
      "label": "Unauthed",
      "parentId": "Session",
      "size": "m",
      "verticalAlign": "middle",
      "w": 176,
      "x": 74,
      "y": 338,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "Authed",
      "label": "Authed",
      "parentId": "Session",
      "size": "m",
      "verticalAlign": "middle",
      "w": 140,
      "x": 91,
      "y": 584,
    },
    {
      "color": "black",
      "fill": "none",
      "geo": "ellipse",
      "h": 40,
      "id": "root_end",
      "parentId": undefined,
      "w": 40,
      "x": 144,
      "y": 1166,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 24,
      "id": "root_end__inner",
      "parentId": undefined,
      "w": 24,
      "x": 152,
      "y": 1174,
    },
  ],
}
`;

exports[`blueprint tests > state diagram > nested compound state with history node 1`] = `
{
  "edges": [
    {
      "bend": 1,
      "endNodeId": "Select",
      "label": undefined,
      "startNodeId": "Mode_start",
    },
    {
      "bend": 54,
      "endNodeId": "Draw",
      "label": "pen tool",
      "startNodeId": "Select",
    },
    {
      "bend": 53,
      "endNodeId": "Erase",
      "label": "eraser",
      "startNodeId": "Draw",
    },
    {
      "bend": 108,
      "endNodeId": "Select",
      "label": "pointer",
      "startNodeId": "Erase",
    },
    {
      "bend": 1,
      "endNodeId": "Viewing",
      "label": undefined,
      "startNodeId": "Editor_start",
    },
    {
      "bend": 73,
      "endNodeId": "Mode",
      "label": "edit",
      "startNodeId": "Viewing",
    },
    {
      "bend": 64,
      "endNodeId": "Viewing",
      "label": "preview",
      "startNodeId": "Mode",
    },
    {
      "bend": -0,
      "endNodeId": "Editor",
      "label": "",
      "startNodeId": "root_start",
    },
    {
      "bend": -0,
      "endNodeId": "Suspended",
      "label": "sleep",
      "startNodeId": "Editor",
    },
    {
      "bend": 1,
      "endNodeId": "H",
      "label": "wake",
      "startNodeId": "Suspended",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 1489,
      "id": "Editor",
      "label": "Editor",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 493,
      "x": 10,
      "y": 128,
    },
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 964,
      "id": "Mode",
      "label": "Mode",
      "parentId": "Editor",
      "size": "s",
      "verticalAlign": "start",
      "w": 368,
      "x": 73,
      "y": 588,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "root_start",
      "parentId": undefined,
      "w": 36,
      "x": 238,
      "y": 1,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "Editor_start",
      "parentId": "Editor",
      "w": 36,
      "x": 238,
      "y": 184,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "Viewing",
      "label": "Viewing",
      "parentId": "Editor",
      "size": "m",
      "verticalAlign": "middle",
      "w": 150,
      "x": 182,
      "y": 338,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "Mode_start",
      "parentId": "Mode",
      "w": 36,
      "x": 246,
      "y": 660,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "Select",
      "label": "Select",
      "parentId": "Mode",
      "size": "m",
      "verticalAlign": "middle",
      "w": 127,
      "x": 201,
      "y": 845,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "Draw",
      "label": "Draw",
      "parentId": "Mode",
      "size": "m",
      "verticalAlign": "middle",
      "w": 112,
      "x": 129,
      "y": 1122,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "Erase",
      "label": "Erase",
      "parentId": "Mode",
      "size": "m",
      "verticalAlign": "middle",
      "w": 116,
      "x": 207,
      "y": 1399,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "H",
      "label": "H",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 61,
      "x": 226,
      "y": 1975,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "Suspended",
      "label": "Suspended",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 189,
      "x": 162,
      "y": 1760,
    },
  ],
}
`;

exports[`blueprint tests > state diagram > simple state diagram 1`] = `
{
  "edges": [
    {
      "bend": 1,
      "endNodeId": "Still",
      "label": "",
      "startNodeId": "root_start",
    },
    {
      "bend": 15,
      "endNodeId": "Moving",
      "label": "",
      "startNodeId": "Still",
    },
    {
      "bend": 12,
      "endNodeId": "Still",
      "label": "",
      "startNodeId": "Moving",
    },
    {
      "bend": 1,
      "endNodeId": "Crash",
      "label": "",
      "startNodeId": "Moving",
    },
    {
      "bend": 1,
      "endNodeId": "root_end",
      "label": "",
      "startNodeId": "Crash",
    },
  ],
  "nodes": [
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "root_start",
      "parentId": undefined,
      "w": 36,
      "x": 50,
      "y": 1,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "Still",
      "label": "Still",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 95,
      "x": 21,
      "y": 124,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "Moving",
      "label": "Moving",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 137,
      "x": 0,
      "y": 291,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "Crash",
      "label": "Crash",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 118,
      "x": 10,
      "y": 458,
    },
    {
      "color": "black",
      "fill": "none",
      "geo": "ellipse",
      "h": 40,
      "id": "root_end",
      "parentId": undefined,
      "w": 40,
      "x": 48,
      "y": 618,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 24,
      "id": "root_end__inner",
      "parentId": undefined,
      "w": 24,
      "x": 56,
      "y": 626,
    },
  ],
}
`;

exports[`blueprint tests > state diagram > state diagram with notes 1`] = `
{
  "edges": [
    {
      "bend": 1,
      "endNodeId": "TicketOpen",
      "label": "",
      "startNodeId": "root_start",
    },
    {
      "bend": 1,
      "endNodeId": "Investigating",
      "label": "assign",
      "startNodeId": "TicketOpen",
    },
    {
      "bend": 55,
      "endNodeId": "WaitingForCustomer",
      "label": "need info",
      "startNodeId": "Investigating",
    },
    {
      "bend": 163,
      "endNodeId": "Investigating",
      "label": "reply received",
      "startNodeId": "WaitingForCustomer",
    },
    {
      "bend": 102,
      "endNodeId": "Resolved",
      "label": "fix applied",
      "startNodeId": "Investigating",
    },
    {
      "bend": 1,
      "endNodeId": "Closed",
      "label": "confirm",
      "startNodeId": "Resolved",
    },
    {
      "arrowheadEnd": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "WaitingForCustomer----note",
      "label": undefined,
      "startNodeId": "WaitingForCustomer",
    },
  ],
  "nodes": [
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "root_start",
      "parentId": undefined,
      "w": 36,
      "x": 316,
      "y": 1,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "TicketOpen",
      "label": "TicketOpen",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 200,
      "x": 234,
      "y": 124,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "Investigating",
      "label": "Investigating",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 220,
      "x": 225,
      "y": 338,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "WaitingForCustomer",
      "label": "WaitingForCustomer",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 325,
      "x": 269,
      "y": 552,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "Resolved",
      "label": "Resolved",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 163,
      "x": 4,
      "y": 552,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75,
      "id": "Closed",
      "label": "Closed",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 133,
      "x": 19,
      "y": 856,
    },
    {
      "align": "middle",
      "color": "yellow",
      "fill": "solid",
      "geo": "rectangle",
      "h": 152,
      "id": "WaitingForCustomer----note",
      "label": "SLA clock may pause here",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "middle",
      "w": 320,
      "x": 271,
      "y": 817,
    },
  ],
}
`;
